fix footer alignment

--- a/resources/style.css
+++ b/resources/style.css
@@ -148,6 +148,10 @@ h2  {display: block;
     .pop-culture.image-content span {
     }
 
+.text-content {height: 421.8px
+    width: 300px;
+  }
+
 .cat-ceo.image-content {
     display: block;
     flex-direction: row;
@@ -207,4 +211,8 @@ footer {display: flex;
     font-size: 16px;
     font-weight: bold;
     color: white;
+  }
+
+  footer nav {display: inline-block;
+    padding-left: 25px;
   }
